--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Nica Donat</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-mojaslika2 rounded-circle mx-auto mb-2" src="assets/img/mojaslika2.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profle rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">O meni</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Obrazovanje</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Hobiji</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Prijatelji</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests"></a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards"></a></li>
                 </ul>
             </div>
         </nav>
@@ -60,14 +60,14 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Obrazovanje</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0"></h3>
+                            <div class="subheading mb-3"></div>
+                            <p>Išla sam u osnovnu školu Vladimira Nazora u Daruvaru</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
